feat(docker-ssh): add GET /api/docker/ssh-keys/download and POST /api/docker/ssh-key; wire FE download; fix duplicate route registrations and use inline requireAuth(); update plan and changelog

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -223,7 +223,8 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Security: All POST routes are CSRF-protected via existing `validateCSRF(c)` double-submit token + origin checks. Session cookies continue to be `HttpOnly` with `SameSite=Lax` and `Secure` set when appropriate.
   - DB: Uses existing `users` table (from migrations `0005_users.*`).
 - Usage:
-  - Settings UI moved to the web frontend with simple hash routing: navigate to `#/settings` from the Account menu.
+  - Settings UI is rendered by the web frontend with path-based routing: navigate to `/account/settings` from the Account menu.
+  - Tabs are path segments: `/account/settings` (profile), `/account/settings/password`, `/account/settings/docker`.
   - The server-rendered `GET /settings` route was removed; APIs remain the same.
   - The SPA uses `/csrf` to include `X-CSRF-Token` on writes.
 - Build: `go build ./...` passes.
@@ -239,6 +240,21 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - No backend changes yet; future work: expose read/write of Docker settings (e.g., DOCKER_CONTAINER_NAME, DOCKER_IMAGE, DOCKER_EXTRA_ARGS, DOCKER_AUTO_REMOVE) via authenticated endpoints with CSRF.
 - UI refinement: Moved the Settings tabs into a fixed horizontal toolbar rendered by `App` just under the header; `SettingsPage` now receives `tab`/`onChangeTab` props.
 - Accessibility: Increased contrast of the fixed toolbar (dark background, light text, clear active indicator) for readability.
+
+#### Update (2025-09-03): Backend + FE wiring complete
+- Backend (`agent.go`): Implemented authenticated Docker settings endpoints using `users.settings` JSONB
+  - `GET /api/settings/docker` → returns `{ docker: { container, image, args, auto_remove } }` for the current user
+  - `POST /api/settings/docker` → CSRF-protected; upserts `settings->docker` via `jsonb_set` and updates `updated_at`
+  - Reused `requireAuth()` and `validateCSRF(c)` patterns; placed routes under `auth := r.Group("/", requireAuth())`
+  - Storage: relies on migration `migrations/0007_users_settings.up.sql` which added `users.settings JSONB NOT NULL DEFAULT '{}'`
+- Frontend (`web/src/App.tsx`): Wired Docker tab to load on activation and save via `saveDocker()` using `fetchCSRFToken()`
+- Status: 404 on `/api/settings/docker` resolved. Form shows persisted values and saves with success/failure messages.
+- Next: E2E test in dev, and consider server-side validation for image/container names.
+
+#### Update (2025-09-07): Dockerfile editor
+- Backend (`agent.go`): Extended POST `/api/settings/docker` to accept `dockerfile` (string) and persist it to `users.settings->docker.dockerfile`.
+- Frontend (`web/src/App.tsx`): Added a `textarea` under Docker Settings to edit the Dockerfile used to build/run the agent container. Value loads from `/api/settings/docker` and saves via the same endpoint.
+- Note: We preserve multi-line formatting (no trim) for `dockerfile`. Placeholder shows a minimal Arch-based example.
 
 ### SSH Key Generation Feature (2025-08-23)
 - Backend (file: `agent.go`):
@@ -256,6 +272,20 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Follow-ups:
   - Add UI toasts on copy; client-side validation for RSA bits.
   - Optional backend/FE tests for the route and form.
+
+#### Update (2025-09-07): Docker SSH key download endpoints + FE hook
+- Backend (`agent.go`):
+  - Added authenticated routes for Docker container SSH keys:
+    - `GET /api/docker/ssh-keys/download?which=public|private` streams `$HOME/.ssh/id_ed25519(.pub)` from the running container as an attachment.
+    - `POST /api/docker/ssh-key` generates a fresh ed25519 keypair in `$HOME/.ssh` inside the container and returns the public key.
+  - Security: Both routes require a valid session via `requireAuth()` and the POST is CSRF-protected via `validateCSRF(c)`.
+  - Robustness: Ensures container is running via `toolsrv.EnsureDockerContainer()` and installs `openssh` if `ssh-keygen` is missing.
+  - Maintenance: Removed duplicate route registrations that caused Gin panic ("handlers are already registered"); switched to inline middleware (e.g., `r.POST(..., requireAuth(), handler)`) to avoid undefined `auth` and scope confusion.
+- Frontend (`web/src/App.tsx` → `SettingsPage`):
+  - Implemented `downloadDockerKey(which)` that fetches the new backend download endpoint and triggers a client download using the existing `download()` helper.
+  - Wired the "Download public key" and "Download private key" buttons to this function; fixed the prior `ReferenceError: downloadDockerKey is not defined`.
+  - Vite proxy already forwards `/api/*` to the Go server on `127.0.0.1:7866`.
+ - Status: Build passes; Air shows routes on startup without duplication; downloads work when keys exist (generate first if needed).
 
 ### Minor Security Fix (2025-08-23)
 - Restored CSRF validation to `POST /github/call` in `agent.go` and limited request body to 1MB.
