Gthing 35 add form to create ssh keys in docker container and export them (#24)
* Add form for creating and exporting SSH keys in Docker container

* Update .windsurf_plan.md with GTHING-35 details

* postgres config: prefer DB_-prefixed keys with backwards compatibility; update sample config and README; document in .windsurf_plan.md and CHANGELOG.md\n\n- db/postgres.go: load DB_DSN/DB_HOST/DB_PORT/DB_USER/DB_PASSWORD/DB_NAME/DB_SSLMODE/DB_MIGRATIONS_DIR with fallbacks to legacy keys and PG* envs; build DSN when absent\n- config.sample.ini: switch [postgres] to DB_-prefixed keys, mention optional DB_DSN\n- README.md: update config example to DB_-prefixed keys and optional DB_DSN\n- .windsurf_plan.md: add section documenting key rename and compatibility\n- CHANGELOG.md: add 2.1.1 entry for key rename and doc updates

* settings(ui): add tabbed Settings with new 'Docker Settings' tab (placeholder)

- web/src/App.tsx: introduce tabs (Profile/Password/Docker Settings); add Docker form placeholders (container name, image, extra args, auto-remove) with Save disabled pending backend
- .windsurf_plan.md: document new Docker Settings tab and future backend work
- CHANGELOG.md: add 2.1.2 entry

* settings(ui): move Settings tabs to fixed toolbar under header; keep Docker Settings tab (placeholder)\n\n- App.tsx: lift settings tab state to App; render sticky toolbar under header; pass tab props to SettingsPage\n- SettingsPage: remove internal tabs; use provided tab to render sections\n- .windsurf_plan.md: note UI refinement for fixed toolbar\n- CHANGELOG.md: add Changed note under 2.1.2

* settings(ui): improve contrast of fixed Settings toolbar\n\n- App.tsx: dark background, light text, clear active tab underline for accessibility\n- .windsurf_plan.md, CHANGELOG.md: document contrast improvement

* feat(docker-ssh): add GET /api/docker/ssh-keys/download and POST /api/docker/ssh-key; wire FE download; fix duplicate route registrations and use inline requireAuth(); update plan a

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -151,6 +151,13 @@
  - Enhanced migration engine to support `.up.sql`/`.down.sql` conventions, stepwise up/down, and status reporting.
  - Added example down migration `migrations/0001_init.down.sql`.
 
+### Config Key Prefix Rename (2025-08-31)
+- Change: Standardized PostgreSQL config keys to use `DB_` prefix in `[postgres]` section.
+  - Preferred keys: `DB_DSN` (optional), `DB_HOST`, `DB_PORT`, `DB_USER`, `DB_PASSWORD`, `DB_NAME`, `DB_SSLMODE`, `DB_MIGRATIONS_DIR`.
+  - Backward compatibility: Legacy keys remain supported (`PG_DSN`, `HOST`, `PORT`, `USER`, `PASSWORD`, `DBNAME`, `SSLMODE`, `MIGRATIONS_DIR`) and env vars (`PGHOST`, `PGPORT`, `PGUSER`, `PGPASSWORD`, `PGDATABASE`).
+- Code: Updated `db/postgres.go` `loadPGConfig()` to prefer new keys with fallbacks; DSN built if not provided.
+- Docs/Samples: Updated `config.sample.ini` and `README.md` to show new keys.
+
 ### Conversation storage migrations (2025-08-09)
 - Added `migrations/0002_conversations_threads_messages.up.sql` to create tables:
   - `threads` (id, title, created_at, updated_at)
@@ -216,7 +223,8 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Security: All POST routes are CSRF-protected via existing `validateCSRF(c)` double-submit token + origin checks. Session cookies continue to be `HttpOnly` with `SameSite=Lax` and `Secure` set when appropriate.
   - DB: Uses existing `users` table (from migrations `0005_users.*`).
 - Usage:
-  - Settings UI moved to the web frontend with simple hash routing: navigate to `#/settings` from the Account menu.
+  - Settings UI is rendered by the web frontend with path-based routing: navigate to `/account/settings` from the Account menu.
+  - Tabs are path segments: `/account/settings` (profile), `/account/settings/password`, `/account/settings/docker`.
   - The server-rendered `GET /settings` route was removed; APIs remain the same.
   - The SPA uses `/csrf` to include `X-CSRF-Token` on writes.
 - Build: `go build ./...` passes.
@@ -225,6 +233,62 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Implemented `SettingsPage` inside `web/src/App.tsx` with hash-based routing (`#/settings`).
 - Account dropdown now includes a Settings item that navigates client-side.
 - Calls existing APIs: `GET /api/settings`, `POST /api/settings`, `POST /api/settings/password`.
+
+### Settings: Docker Settings Tab (2025-08-31)
+- Frontend (`web/src/App.tsx`): Added a tabbed UI to the Settings page with a new "Docker Settings" tab alongside Profile and Password.
+- Docker tab currently shows placeholders for container name, image, extra args, and auto-remove. Save is disabled pending backend API.
+- No backend changes yet; future work: expose read/write of Docker settings (e.g., DOCKER_CONTAINER_NAME, DOCKER_IMAGE, DOCKER_EXTRA_ARGS, DOCKER_AUTO_REMOVE) via authenticated endpoints with CSRF.
+- UI refinement: Moved the Settings tabs into a fixed horizontal toolbar rendered by `App` just under the header; `SettingsPage` now receives `tab`/`onChangeTab` props.
+- Accessibility: Increased contrast of the fixed toolbar (dark background, light text, clear active indicator) for readability.
+
+#### Update (2025-09-03): Backend + FE wiring complete
+- Backend (`agent.go`): Implemented authenticated Docker settings endpoints using `users.settings` JSONB
+  - `GET /api/settings/docker` → returns `{ docker: { container, image, args, auto_remove } }` for the current user
+  - `POST /api/settings/docker` → CSRF-protected; upserts `settings->docker` via `jsonb_set` and updates `updated_at`
+  - Reused `requireAuth()` and `validateCSRF(c)` patterns; placed routes under `auth := r.Group("/", requireAuth())`
+  - Storage: relies on migration `migrations/0007_users_settings.up.sql` which added `users.settings JSONB NOT NULL DEFAULT '{}'`
+- Frontend (`web/src/App.tsx`): Wired Docker tab to load on activation and save via `saveDocker()` using `fetchCSRFToken()`
+- Status: 404 on `/api/settings/docker` resolved. Form shows persisted values and saves with success/failure messages.
+- Next: E2E test in dev, and consider server-side validation for image/container names.
+
+#### Update (2025-09-07): Dockerfile editor
+- Backend (`agent.go`): Extended POST `/api/settings/docker` to accept `dockerfile` (string) and persist it to `users.settings->docker.dockerfile`.
+- Frontend (`web/src/App.tsx`): Added a `textarea` under Docker Settings to edit the Dockerfile used to build/run the agent container. Value loads from `/api/settings/docker` and saves via the same endpoint.
+- Note: We preserve multi-line formatting (no trim) for `dockerfile`. Placeholder shows a minimal Arch-based example.
+
+### SSH Key Generation Feature (2025-08-23)
+- Backend (file: `agent.go`):
+  - Added authenticated route `POST /api/ssh-keys` inside `auth := r.Group("/", requireAuth())`, placed after the password change handler.
+  - Enforces CSRF via `validateCSRF(c)`.
+  - Generates keys inside the Docker container: ensures container, ensures `ssh-keygen`, runs keygen, reads keys, and cleans up temp files.
+  - Supports `ed25519` (default) and `rsa` with configurable bits (>=2048). Accepts `comment` and optional `passphrase`.
+  - Returns JSON: `{ ok, type, bits, public_key, private_key }`.
+- Frontend (file: `web/src/App.tsx` → `SettingsPage`):
+  - Added form for type, RSA bits, comment, passphrase; `Generate` calls `/api/ssh-keys` with CSRF.
+  - Displays public/private keys with copy-to-clipboard and download buttons; hides private key by default.
+- Status:
+  - Backend `go build ./...` passes; Frontend `npm run build` passes.
+  - Manual E2E recommended to verify Docker presence and browser downloads.
+- Follow-ups:
+  - Add UI toasts on copy; client-side validation for RSA bits.
+  - Optional backend/FE tests for the route and form.
+
+#### Update (2025-09-07): Docker SSH key download endpoints + FE hook
+- Backend (`agent.go`):
+  - Added authenticated routes for Docker container SSH keys:
+    - `GET /api/docker/ssh-keys/download?which=public|private` streams `$HOME/.ssh/id_ed25519(.pub)` from the running container as an attachment.
+    - `POST /api/docker/ssh-key` generates a fresh ed25519 keypair in `$HOME/.ssh` inside the container and returns the public key.
+  - Security: Both routes require a valid session via `requireAuth()` and the POST is CSRF-protected via `validateCSRF(c)`.
+  - Robustness: Ensures container is running via `toolsrv.EnsureDockerContainer()` and installs `openssh` if `ssh-keygen` is missing.
+  - Maintenance: Removed duplicate route registrations that caused Gin panic ("handlers are already registered"); switched to inline middleware (e.g., `r.POST(..., requireAuth(), handler)`) to avoid undefined `auth` and scope confusion.
+- Frontend (`web/src/App.tsx` → `SettingsPage`):
+  - Implemented `downloadDockerKey(which)` that fetches the new backend download endpoint and triggers a client download using the existing `download()` helper.
+  - Wired the "Download public key" and "Download private key" buttons to this function; fixed the prior `ReferenceError: downloadDockerKey is not defined`.
+  - Vite proxy already forwards `/api/*` to the Go server on `127.0.0.1:7866`.
+ - Status: Build passes; Air shows routes on startup without duplication; downloads work when keys exist (generate first if needed).
+
+### Minor Security Fix (2025-08-23)
+- Restored CSRF validation to `POST /github/call` in `agent.go` and limited request body to 1MB.
 
 ## Frontend Refactor (2025-08-13)
 - Extracted modal UIs from `web/src/App.tsx` into dedicated components:
@@ -971,3 +1035,6 @@ Next steps:
 - Build initial GitHub tools (analogous to Jira): repos list/get, issues list/create/update, PR list/create/merge, comments.
 - Extend webhook handling to process common events (issues, PRs, pushes) and optionally persist to DB.
 - Document GitHub configuration and examples.
+
+## 2025-08-25: GTHING-35 SSH Key Creation Feature
+Committed changes to add a form for creating and exporting SSH keys in Docker container. Modified files: agent.go, web/src/App.tsx, web/vite.config.ts, and this plan. Commit hash: dfc356f. This enhances the interactive shell capabilities.
