refactor(routes): move /chat to routes/chat_routes.go; fix double registration of /github/call; register Slack/GitHub/Jira routes from main; update plan docs

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -36,10 +36,12 @@
 - Backend (file: `agent.go` → package `routes/`)
   - Moved Slack webhook handler to `routes/slack_routes.go` (`RegisterSlackRoutes`) and registered from `main`.
   - Moved GitHub webhook handler to `routes/github_routes.go` (`RegisterGithubRoutes`) and registered from `main`.
+  - Moved GitHub direct API caller to `routes/github_routes.go` (`POST /github/call`) and registered from `main`.
   - Moved Signup endpoint to `routes/signup_routes.go` (`RegisterSignupRoutes`) and registered from `main`.
   - Moved Login endpoint to `routes/login_routes.go` (`RegisterLoginRoutes` with injected deps for limiter/session helpers) and registered from `main`.
   - Moved authenticated SSH key generation endpoint to `routes/api_ssh_routes.go` (`RegisterAPISSHRoutes` with injected Docker/ssh-keygen helpers) and registered from `main`.
   - Moved Jira webhook handler to `routes/jira_routes.go` (`RegisterJiraRoutes`) and registered from `main`.
+  - Moved Chat handler to `routes/chat_routes.go` (`RegisterChatRoutes`) and registered from `main`.
 - Rationale: reduce `agent.go` size, improve modularity and testability; route files now encapsulate HTTP logic.
 - Status: `go build ./...` and `go test ./...` pass.
 
