routes: move shell session + WebSocket endpoints from agent.go to routes/shell_routes.go; register via RegisterShellRoutes and reuse wsUpgrader; docs: update .windsurf_plan.md and CHANGELOG.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -42,6 +42,7 @@
   - Moved authenticated SSH key generation endpoint to `routes/api_ssh_routes.go` (`RegisterAPISSHRoutes` with injected Docker/ssh-keygen helpers) and registered from `main`.
   - Moved Jira webhook handler to `routes/jira_routes.go` (`RegisterJiraRoutes`) and registered from `main`.
   - Moved Chat handler to `routes/chat_routes.go` (`RegisterChatRoutes`) and registered from `main`.
+  - Moved Shell session + WebSocket endpoints to `routes/shell_routes.go` (`RegisterShellRoutes`) and registered from `main` using the existing `wsUpgrader` to preserve the origin policy.
 - Rationale: reduce `agent.go` size, improve modularity and testability; route files now encapsulate HTTP logic.
 - Status: `go build ./...` and `go test ./...` pass.
 
