routes: move authenticated settings APIs (profile, password, docker) from agent.go to routes/api_settings_routes.go; wire via RegisterAPISettingsRoutes; fix unused import; docs: update plan and changelog

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -43,6 +43,7 @@
   - Moved Jira webhook handler to `routes/jira_routes.go` (`RegisterJiraRoutes`) and registered from `main`.
   - Moved Chat handler to `routes/chat_routes.go` (`RegisterChatRoutes`) and registered from `main`.
   - Moved Shell session + WebSocket endpoints to `routes/shell_routes.go` (`RegisterShellRoutes`) and registered from `main` using the existing `wsUpgrader` to preserve the origin policy.
+  - Moved Authenticated Settings APIs (profile, password, docker) to `routes/api_settings_routes.go` (`RegisterAPISettingsRoutes`) and registered from `main` via the authenticated `auth` group.
 - Rationale: reduce `agent.go` size, improve modularity and testability; route files now encapsulate HTTP logic.
 - Status: `go build ./...` and `go test ./...` pass.
 
