--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -44,6 +44,7 @@
   - Moved Chat handler to `routes/chat_routes.go` (`RegisterChatRoutes`) and registered from `main`.
   - Moved Shell session + WebSocket endpoints to `routes/shell_routes.go` (`RegisterShellRoutes`) and registered from `main` using the existing `wsUpgrader` to preserve the origin policy.
   - Moved Authenticated Settings APIs (profile, password, docker) to `routes/api_settings_routes.go` (`RegisterAPISettingsRoutes`) and registered from `main` via the authenticated `auth` group.
+  - Moved Docker SSH key endpoints (download/generate) to `routes/api_docker_routes.go` (`RegisterAPIDockerRoutes`) and registered from `main` with injected Docker helpers and CSRF validation for POST.
 - Rationale: reduce `agent.go` size, improve modularity and testability; route files now encapsulate HTTP logic.
 - Status: `go build ./...` and `go test ./...` pass.
 
