tools: extract Jira create-issue helpers/executor to tools/jira_issue_create_ops.go; docs: update plan and changelog

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -49,6 +49,16 @@
 - Rationale: reduce `agent.go` size, improve modularity and testability; route files now encapsulate HTTP logic.
 - Status: `go build ./...` and `go test ./...` pass.
 
+### Jira Tools Refactor (2025-09-07)
+- Backend (package: `tools/`)
+  - Extracted Jira create issue helpers and executor from `tools/jira_issue_ops.go` into `tools/jira_issue_create_ops.go` for separation of concerns:
+    - `jiraCreateIssueParams`
+    - `parseJiraCreateIssueArgs(...)`
+    - `buildJiraCreateIssueBody(...)`
+    - `executeJiraCreateIssueTool(...)`
+  - Left shared functions in `jira_issue_ops.go` (e.g., `processADFValue`, `jiraDo`) and retained tool registration pointing to the moved executor.
+  - No behavior change; build verified.
+
 ### Slack App Home Improvements (2025-08-23)
 - Robust Home tab publishing with context: `utility.PublishSlackHomeTab(ctx, userID, hash)` uses `slack.PublishViewContextRequest` and retries without hash on `hash_conflict`.
 - Home view builder now returns `(view, error)` to surface partial failures (DB fetch issues) while still rendering.
