security(ws): enforce origin allowlist for WebSocket upgrades; utility: add RunDockerExec/EnsureSSHKeygenAvailable and DummyBcryptCompare; routes: wire new helpers and timing mitigation; docs: update .windsurf_plan and CHANGELOG for 2.1.7

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -59,6 +59,27 @@
   - Left shared functions in `jira_issue_ops.go` (e.g., `processADFValue`, `jiraDo`) and retained tool registration pointing to the moved executor.
   - No behavior change; build verified.
 
+### Security: WebSocket Origin Allowlist (2025-09-07)
+- Backend (file: `agent.go`): Implemented strict origin policy for WebSocket upgrades used by the shell broker.
+  - Added `isAllowedWSOrigin(*http.Request) bool` and wired it into `wsUpgrader.CheckOrigin`.
+  - Configurable allowlist via INI `[default] ALLOWED_ORIGINS` (comma-separated full origins like `https://app.example.com`).
+  - When unset, falls back to same-origin policy using `utility.IsSecure(*http.Request)` to determine `http` vs `https` (proxy-aware via `X-Forwarded-Proto`).
+  - Logs a warning on config load failure and defaults to same-origin.
+- Rationale: Prevent cross-site WebSocket hijacking (CSWSH) while allowing explicit multi-origin setups.
+
+### Utility: Common helpers for Docker + Auth timing (2025-09-07)
+- New file: `utility/common.go`
+  - `RunDockerExec(container string, args []string, timeout time.Duration) (stdout, stderr string, err error)`
+    - Used by Docker-related routes to execute commands inside the running container with a timeout.
+  - `EnsureSSHKeygenAvailable(container string) error`
+    - Verifies `ssh-keygen` exists; if missing, installs `openssh` via `pacman` in the Arch-based container, then re-checks.
+  - `DummyBcryptCompare(password string)`
+    - Generates a per-process dummy bcrypt hash once and compares against it to normalize timing for "user not found" vs "wrong password" cases.
+- Wiring changes in routes:
+  - `routes.RegisterAPIDockerRoutes(...)` and `routes.RegisterAPISSHRoutes(...)` now receive `EnsureSSHKeygenAvailable` and `RunDockerExec` from `utility`.
+  - `routes.RegisterLoginRoutes(...)` now receives `DummyBcryptCompare` to apply timing mitigation when the username is unknown.
+
+
 ### Slack App Home Improvements (2025-08-23)
 - Robust Home tab publishing with context: `utility.PublishSlackHomeTab(ctx, userID, hash)` uses `slack.PublishViewContextRequest` and retries without hash on `hash_conflict`.
 - Home view builder now returns `(view, error)` to surface partial failures (DB fetch issues) while still rendering.
