routes/jira: fix goroutine param to use promptStr for system/user messages; routes/signup: dedupe PG unique-violation check via utility.IsUniqueViolation; utility: add db_errors helper; docs: update plan and changelog

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -79,6 +79,15 @@
   - `routes.RegisterAPIDockerRoutes(...)` and `routes.RegisterAPISSHRoutes(...)` now receive `EnsureSSHKeygenAvailable` and `RunDockerExec` from `utility`.
   - `routes.RegisterLoginRoutes(...)` now receives `DummyBcryptCompare` to apply timing mitigation when the username is unknown.
 
+### Bugfix (2025-09-07): Jira webhook goroutine parameter
+- File: `routes/jira_routes.go`
+- Issue: Background goroutine invoked with an empty `systemPrompt` argument, causing `utility.StoreMessage` to persist an empty system message while the actual `promptStr` was only used for the user message. This shadowed the intended value.
+- Fix: Change goroutine signature to `func(promptStr, issueKey string)` and invoke it as `(promptStr, issueKey)`, and use `promptStr` for both the system and user messages before calling `GeminiAPIHandler`.
+
+### Refactor (2025-09-07): Centralize Postgres unique violation helper
+- New file: `utility/db_errors.go` exporting `utility.IsUniqueViolation(err error) bool` (checks SQLSTATE 23505 via `pgconn.PgError`).
+- Removed duplicate local helper from `agent.go` and `routes/signup_routes.go`; updated signup route to call `utility.IsUniqueViolation`.
+- Benefit: single source of truth for PG error checks and cleaner imports.
 
 ### Slack App Home Improvements (2025-08-23)
 - Robust Home tab publishing with context: `utility.PublishSlackHomeTab(ctx, userID, hash)` uses `slack.PublishViewContextRequest` and retries without hash on `hash_conflict`.
