--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -109,6 +109,7 @@
 - AI follow-up loop (2025-08-20): In `agent.go` GitHub webhook handler, detect `pull_request_review` and `pull_request_review_comment` authored by `gemini-code-assist[bot]`, extract review/comment body and inline context, and asynchronously invoke `utility.GeminiAPIHandler` with task instructions to apply suggestions and respond `ALL_DONE!` when none remain. Logged results only for now.
   - Logging (2025-08-20): Improved AI loop diagnostics (repo/PR/event IDs, payload sizes, elapsed durations, ALL_DONE detection) and switched to background context with 3m timeout to avoid request-scope cancellations.
   - Fail-fast (2025-08-20): Updated AI task prompt to allow explicit bailout with `GIVING UP: <reason>` when the agent determines it cannot complete the requested changes.
+  - Restoration (2025-09-07): After extracting routes into `routes/`, restored the AI follow-up logic inside `routes/github_routes.go`. The `/webhook/github` handler now detects `pull_request_review` and `pull_request_review_comment` events from `gemini-code-assist[bot]`, extracts the review/comment body and PR number, and asynchronously calls `utility.GeminiAPIHandler` with a 3-minute timeout. The response is logged (posting back to GitHub can be added later). This preserves the original behavior that was temporarily lost during refactor.
 - Refactor (2025-08-18): DRYed Jira create-issue labels parsing in `tools/jira_issue_ops.go` by introducing a local `addLabel` helper inside `buildJiraCreateIssueBody()` to trim and append non-empty labels from `[]interface{}`, `[]string`, or comma-separated `string`. Behavior preserved.
 - Behavior Alignment (2025-08-18): Updated `buildJiraCreateIssueBody()` so user-provided `fields` take precedence over convenience params. Convenience params now apply only when the corresponding key (e.g., `project`, `issuetype`, `summary`, `description`, `labels`, `priority`, `assignee`, `reporter`, `parent`) is absent in `fields`.
 - Documented: jira_create_issue now respects --fields precedence over convenience params.
