jira(webhook): switch to thread-per-issue via GetOrCreateThreadByTitle('Jira: <ISSUE-KEY>'); add helper in utility/db.go; docs(plan,changelog): record behavior change

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -1,4 +1,10 @@
 # AI Agent Improvement Plan
+### Jira Webhook Conversation Threading (2025-09-07)
+- Behavior change: switch to thread-per-issue for Jira webhook events.
+  - The handler in `routes/jira_routes.go` now derives a title `Jira: <ISSUE-KEY>` and calls `utility.GetOrCreateThreadByTitle(...)`.
+  - Previously, we created a new thread on every event; earlier behavior reused the most recent thread. Thread-per-issue balances context reuse without cross-issue mixing.
+  - Messages stored under the same issue key accumulate in the same thread.
+
 
 ## Objectives
 - Add a chat interface for the AI agent to handle user inputs via chat and call tools.
