validation: centralize email regex in utility/validation.go; use in signup; remove duplicate from agent.go; docs(plan): note centralization

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -5,6 +5,11 @@
   - Previously, we created a new thread on every event; earlier behavior reused the most recent thread. Thread-per-issue balances context reuse without cross-issue mixing.
   - Messages stored under the same issue key accumulate in the same thread.
 
+### Centralized Email Validation (2025-09-07)
+- Added `utility/validation.go` exposing `utility.EmailRegex()` and `utility.IsValidEmail()`.
+- Updated `routes/signup_routes.go` to use `utility.IsValidEmail`.
+- Removed duplicated email regex/cache from `agent.go` to avoid drift.
+
 
 ## Objectives
 - Add a chat interface for the AI agent to handle user inputs via chat and call tools.
