slack(home): log error on PublishSlackHomeTab failure; docs(plan,changelog): record logging restoration

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -10,6 +10,10 @@
 - Updated `routes/signup_routes.go` to use `utility.IsValidEmail`.
 - Removed duplicated email regex/cache from `agent.go` to avoid drift.
 
+### Slack Home Error Logging (2025-09-07)
+- Restored error logging for Slack App Home publishing in `routes/slack_routes.go`.
+- Now logs `[Slack Home] publish failed for user <id>: <error>` when `utility.PublishSlackHomeTab(...)` returns an error.
+
 
 ## Objectives
 - Add a chat interface for the AI agent to handle user inputs via chat and call tools.
